Update debater name

--- a/Career and Education/2023-06-27-10-27-04.md
+++ b/Career and Education/2023-06-27-10-27-04.md
@@ -25,7 +25,7 @@ Based on the provided information, immediate financial stability holds moderate 
 ## Debate History
 
 
-***AI Angel :***
+***Affirmative :***
 
 > Argument: Pursuing a graduate degree immediately after undergrad can boost your earning potential and career prospects.
 
@@ -33,7 +33,7 @@ Based on the provided information, immediate financial stability holds moderate 
 
 
 
-***AI Devil :***
+***Negative :***
 
 > Argument: Gaining work experience first can lead to career progression and better long-term outcomes.
 
@@ -41,7 +41,7 @@ Based on the provided information, immediate financial stability holds moderate 
 
 
 
-***AI Angel :***
+***Affirmative :***
 
 > Argument: A graduate degree can provide specialized knowledge and skills that enhance career progression and long-term outcomes.
 
@@ -49,7 +49,7 @@ Based on the provided information, immediate financial stability holds moderate 
 
 
 
-***AI Devil :***
+***Negative :***
 
 > Argument: Gaining work experience before pursuing a graduate degree can maximize the benefits of higher education.
 
@@ -59,4 +59,4 @@ Based on the provided information, immediate financial stability holds moderate 
 
 ## Result
 
-Based on the person's personal preferences, AI Devil's argument and justification are more convincing. AI Devil emphasizes the importance of gaining hands-on experience in the marketing field, which aligns with the individual's high value for gaining hands-on experience (score of 8). AI Devil also addresses the benefits of work experience in maximizing the value of a graduate degree, which is relevant to the person's considerable value for the prestige and knowledge from a graduate degree (score of 7). Additionally, AI Devil's argument considers the potential for career progression and long-term outcomes, which is in line with the individual's lesser importance for career acceleration (score of 4). Both debaters have discussed financial situation, job market demand, graduate program opportunities, personal career goals, and availability of job opportunities.
+Based on the person's personal preferences, Negative's argument and justification are more convincing. Negative emphasizes the importance of gaining hands-on experience in the marketing field, which aligns with the individual's high value for gaining hands-on experience (score of 8). Negative also addresses the benefits of work experience in maximizing the value of a graduate degree, which is relevant to the person's considerable value for the prestige and knowledge from a graduate degree (score of 7). Additionally, Negative's argument considers the potential for career progression and long-term outcomes, which is in line with the individual's lesser importance for career acceleration (score of 4). Both debaters have discussed financial situation, job market demand, graduate program opportunities, personal career goals, and availability of job opportunities.
