Rename two sides of debate

--- a/Career and Education/2023-06-29-16-21-27.md
+++ b/Career and Education/2023-06-29-16-21-27.md
@@ -26,13 +26,13 @@ Based on their preferences, the person is willing to pay more for living in a mo
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > One of the main advantages of starting your career in Chengdu is the opportunity to learn about a new language and culture, which will be extremely valuable to outside employers. Chengdu has been awarded the title of the happiest city in China for many years in succession, offering a great infrastructure and a more relaxed lifestyle that aligns with your preferences. Additionally, the city has a thriving job market, with numerous job opportunities in both private and public institutions, allowing you to find a suitable position in a well-established company while enjoying the local culture and networking opportunities.
 
 
 
-***Negative :***
+***Contradiction :***
 
 > While Chengdu does offer a more relaxed lifestyle and opportunities to learn about the local culture, starting your career in Beijing has its own set of advantages that align with your preferences. Beijing's competitive job market and the presence of numerous multinational companies provide you with a higher chance of securing a position in a well-established organization. Additionally, the city's fast-paced environment and diverse population offer ample networking opportunities, which you consider crucial for your professional growth.
 
@@ -42,7 +42,7 @@ Based on their preferences, the person is willing to pay more for living in a mo
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > While Beijing does offer a competitive job market and numerous multinational companies, Chengdu's job market has also been growing steadily, making it a viable option for starting your career. Chengdu has seen significant growth in the technology sector, with many startups and established tech companies having a presence in the city. This provides you with opportunities to work in well-established companies while enjoying a more relaxed lifestyle and local culture. Additionally, the lower cost of living in Chengdu allows you to maintain a comfortable lifestyle on a lower budget, which can be beneficial for a new graduate. The networking opportunities in Chengdu may not be as extensive as in Beijing, but they are still present and can contribute to your professional growth. 
 
@@ -52,7 +52,7 @@ Based on their preferences, the person is willing to pay more for living in a mo
 
 
 
-***Negative :***
+***Contradiction :***
 
 > While Chengdu's growing job market and lower cost of living do provide a balanced option for starting a career, the benefits of working in multinational companies and the importance of networking opportunities in career growth should not be overlooked. Working in a multinational company exposes you to diverse perspectives and opinions, which can help you grow both professionally and personally. It also opens up international opportunities, such as travel and potential relocation, which can be valuable for your career progression.
 
@@ -66,4 +66,4 @@ Based on their preferences, the person is willing to pay more for living in a mo
 
 ## Result
 
-The argument and justification provided by AI Debater B are more convincing based on the person's personal preferences. While Chengdu offers a more relaxed lifestyle and a growing job market, the person prioritizes starting their career in a well-established multinational company and values numerous networking opportunities for their professional growth. AI Debater B highlights the benefits of working in multinational companies and the importance of networking opportunities in career growth, which align better with the person's preferences and make Beijing a more suitable choice for their career growth.
+The argument and justification provided by the Proposition are more convincing based on the person's personal preferences. While Chengdu offers a more relaxed lifestyle and a growing job market, the person prioritizes starting their career in a well-established multinational company and values numerous networking opportunities for their professional growth. The Contradiction highlights the benefits of working in multinational companies and the importance of networking opportunities in career growth, which align better with the person's preferences and make Beijing a more suitable choice for their career growth.
