--- a/Ethical and Moral Dilemmas/2023-06-27-14-27-20.md
+++ b/Ethical and Moral Dilemmas/2023-06-27-14-27-20.md
@@ -27,7 +27,7 @@ The person places a high level of importance on their personal moral values and 
 ## Debate History
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Prioritizing academic success can lead to better time management, resilience, and goal-setting skills.
 
@@ -35,7 +35,7 @@ The person places a high level of importance on their personal moral values and 
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Upholding honesty and integrity leads to long-term success and a strong reputation.
 
@@ -43,7 +43,7 @@ The person places a high level of importance on their personal moral values and 
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Prioritizing academic success can be achieved without compromising honesty and integrity.
 
@@ -51,7 +51,7 @@ The person places a high level of importance on their personal moral values and 
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Upholding honesty and integrity in academic challenges contributes to personal growth and long-term success.
 
@@ -61,4 +61,4 @@ The person places a high level of importance on their personal moral values and 
 
 ## Result
 
-AI Negative's argument and justification are more convincing in terms of the subject's preferences. Negative emphasizes the importance of upholding honesty and integrity while still acknowledging the importance of academic success. They also provide alternative ways to achieve academic success without compromising personal moral values, which aligns with the subject's preferences. Additionally, Negative highlights the long-term benefits of maintaining integrity, such as personal growth and the development of essential life skills, which are important to the subject.
+The Contradiction's argument and justification are more convincing in terms of the subject's preferences. The Contradiction emphasizes the importance of upholding honesty and integrity while still acknowledging the importance of academic success. They also provide alternative ways to achieve academic success without compromising personal moral values, which aligns with the subject's preferences. Additionally, the Contradiction highlights the long-term benefits of maintaining integrity, such as personal growth and the development of essential life skills, which are important to the subject.
