--- a/Lifestyle and Health/2023-06-27-13-51-04.md
+++ b/Lifestyle and Health/2023-06-27-13-51-04.md
@@ -25,7 +25,7 @@ From the information provided, the individual has little willingness to accept r
 ## Debate History
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Back surgery has a high success rate in reducing chronic pain and improving quality of life.
 
@@ -33,7 +33,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Alternative treatments can provide relief without the risks associated with surgery.
 
@@ -41,7 +41,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Back surgery has a higher success rate and more lasting relief compared to alternative treatments.
 
@@ -49,7 +49,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Personalized alternative treatments can offer lasting relief with lower risks.
 
@@ -57,7 +57,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Back surgery provides a more reliable and consistent solution for chronic pain relief.
 
@@ -65,7 +65,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: A combination of alternative treatments can provide consistent and lasting relief.
 
@@ -73,7 +73,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Back surgery remains the most effective option for lasting relief despite the potential benefits of combining alternative treatments.
 
@@ -81,7 +81,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Considering the risks and complications, alternative treatments should be tried before resorting to back surgery.
 
@@ -89,7 +89,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Back surgery should be considered when alternative treatments have been exhausted and the benefits outweigh the risks.
 
@@ -97,7 +97,7 @@ From the information provided, the individual has little willingness to accept r
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Trying alternative treatments first can potentially provide relief without the need for surgery.
 
@@ -107,4 +107,4 @@ From the information provided, the individual has little willingness to accept r
 
 ## Result
 
-AI Negative's argument and justification is more convincing in terms of the subject's preferences. Negative emphasizes the importance of trying alternative treatments first, considering the individual's preference for lower risk and less invasive treatments. Negative also highlights the potential for relief without the need for surgery, which aligns with the individual's preferences and concerns about potential side effects and complications from surgery.
+The Contradiction's argument and justification is more convincing in terms of the subject's preferences. The Contradiction emphasizes the importance of trying alternative treatments first, considering the individual's preference for lower risk and less invasive treatments. The Contradiction also highlights the potential for relief without the need for surgery, which aligns with the individual's preferences and concerns about potential side effects and complications from surgery.
