--- a/Lifestyle and Health/2023-06-27-14-06-31.md
+++ b/Lifestyle and Health/2023-06-27-14-06-31.md
@@ -25,7 +25,7 @@ The person and their partner are okay with facing some financial burden when hav
 ## Debate History
 
 
-***Affirmative :***
+***Proposition :***
 
 > One of the main reasons to have a baby now while biologically able is to avoid potential fertility challenges and complications associated with waiting too long.
 
@@ -35,7 +35,7 @@ The person and their partner are okay with facing some financial burden when hav
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Financial stability is crucial for providing a secure environment and better opportunities for a child.
 
@@ -43,7 +43,7 @@ The person and their partner are okay with facing some financial burden when hav
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > While financial stability is important, emotional readiness and a strong support system can compensate for financial challenges when raising a child.
 
@@ -53,7 +53,7 @@ The person and their partner are okay with facing some financial burden when hav
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Financial instability can have long-term negative effects on a child's development.
 
@@ -63,4 +63,4 @@ The person and their partner are okay with facing some financial burden when hav
 
 ## Result
 
-Based on the person's personal preferences, AI Affirmative's argument and justification are more convincing. The person and their partner are emotionally ready, have a strong support system, and are okay with facing some financial burden when having a child. They are also aware of potential fertility challenges associated with waiting. AI Affirmative emphasizes the importance of emotional readiness and a strong support system, which aligns with the person's preferences, while AI Negative focuses on financial stability, which is less important to the person.
+Based on the person's personal preferences, the Proposition's argument and justification are more convincing. The person and their partner are emotionally ready, have a strong support system, and are okay with facing some financial burden when having a child. They are also aware of potential fertility challenges associated with waiting. AI Proposition emphasizes the importance of emotional readiness and a strong support system, which aligns with the person's preferences, while the Contradiction focuses on financial stability, which is less important to the person.
