--- a/Ethical and Moral Dilemmas/2023-06-27-14-44-35.md
+++ b/Ethical and Moral Dilemmas/2023-06-27-14-44-35.md
@@ -27,7 +27,7 @@ The harmful action committed by their friend is not very severe, affecting only 
 ## Debate History
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Exposing the harmful action promotes accountability and prevents further harm.
 
@@ -35,7 +35,7 @@ The harmful action committed by their friend is not very severe, affecting only 
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Maintaining confidentiality is crucial for trust and friendship.
 
@@ -43,7 +43,7 @@ The harmful action committed by their friend is not very severe, affecting only 
 
 
 
-***Affirmative :***
+***Proposition :***
 
 > Argument: Exposing the harmful action can protect others and uphold ethical responsibility.
 
@@ -51,7 +51,7 @@ The harmful action committed by their friend is not very severe, affecting only 
 
 
 
-***Negative :***
+***Contradiction :***
 
 > Argument: Addressing the issue privately can lead to a more constructive resolution.
 
@@ -61,4 +61,4 @@ The harmful action committed by their friend is not very severe, affecting only 
 
 ## Result
 
-AI Negative's argument and justification is more convincing in terms of the subject's personal preferences. Negative acknowledges the importance of confidentiality in friendships and suggests addressing the issue privately with the friend, which aligns with the subject's preference for not having an exceptionally close relationship with the friend. This approach allows the friend to take responsibility for their actions and make amends without causing unnecessary harm to their reputation or the relationship. Additionally, Negative's argument takes into consideration the severity of the harmful action and its impact on the affected individuals, as well as the potential consequences of exposure.
+The Contradiction's argument and justification is more convincing in terms of the subject's personal preferences. The Contradiction acknowledges the importance of confidentiality in friendships and suggests addressing the issue privately with the friend, which aligns with the subject's preference for not having an exceptionally close relationship with the friend. This approach allows the friend to take responsibility for their actions and make amends without causing unnecessary harm to their reputation or the relationship. Additionally, the Contradiction's argument takes into consideration the severity of the harmful action and its impact on the affected individuals, as well as the potential consequences of exposure.
